Updated instructional text

--- a/src/templates/sections/detail.twig
+++ b/src/templates/sections/detail.twig
@@ -53,7 +53,7 @@
 
 {# The content of the CP Section #}
 {% set content %}
-    <h2>{{ selectedItem ~ " specific pricing"|t('help-links') }}</h2>
+    <h2>{{ selectedItem ~ " Links"|t('help-links') }}</h2>
     <p class="textline">Below you will be able to update the links for the {{ selectedItem }} section heading. All of these will be displayed in the widget once added to the dashboard.</p>
     <input type="hidden" name="action" value="help-links/cp/save-sections">
     <input type="hidden" name="pluginHandle" value="help-links">
