updated instruction for section headings

--- a/src/templates/settings/index.twig
+++ b/src/templates/settings/index.twig
@@ -44,7 +44,7 @@
 		
 		{{ forms.editableTableField({
 		    label: 'Sections',
-		    instructions: 'Please define some sections for your links',
+		    instructions: 'Please define some sections for your links, please be aware that renaming a section will remove all of its links. Use this to add, remove, and reorder sections. If you need to rename a section, there is another page you can do this from',
 		    id: 'Sections',
 		    name: 'sections',
 		    cols: [
