add remove and move fuctions added back into table fields

--- a/src/templates/sections/settings.twig
+++ b/src/templates/sections/settings.twig
@@ -37,5 +37,8 @@
 	    	type: "singleline"
 	    }
     ],
-    rows: sectionSettings['links']
+    rows: sectionSettings['links'],
+	allowAdd: true,
+	allowReorder: true,
+	allowDelete: true
 }) }}
