--- a/src/templates/settings/index.twig
+++ b/src/templates/settings/index.twig
@@ -54,7 +54,10 @@
 			    	type: "singleline"
 			    }
 		    ],
-		    rows: settings['sections']
+		    rows: settings['sections'],
+			allowAdd: true,
+			allowReorder: true,
+			allowDelete: true
 		}) }}
     {% endnamespace %}
 {% endset %}
