--- a/src/templates/settings/index.twig
+++ b/src/templates/settings/index.twig
@@ -19,7 +19,7 @@
 {% set docsUrl = "https://github.com/a-digital/help-links/blob/craft3/README.md" %}
 
 {# The title of this CP section #}
-{% set title = "Plugin Settings" %}
+{% set title = "Plugin Preferences" %}
 
 {# The URL to this plugin's base CP section #}
 {% set pluginCpUrl = url('help-links') %}
