--- a/src/templates/settings/index.twig
+++ b/src/templates/settings/index.twig
@@ -54,7 +54,7 @@
 			    	type: "singleline"
 			    }
 		    ],
-		    rows: settings['sections'],
+		    rows: settings['sections']|json_decode,
 			allowAdd: true,
 			allowReorder: true,
 			allowDelete: true
