--- a/src/templates/sections/index.twig
+++ b/src/templates/sections/index.twig
@@ -28,7 +28,7 @@
 {% set navItems = {
     'heading': { heading: "Sections"|t },
 } %}
-{% for location in settings["sections"] %}
+{% for location in settings["sections"]|json_decode %}
 	{% set friendlyUrl = location[0]|replace({" ": "", "-": ""})|lower %}
 	{% set navItems = navItems |merge({
 	    (friendlyUrl): {
