--- a/src/templates/sections/settings.twig
+++ b/src/templates/sections/settings.twig
@@ -37,20 +37,8 @@
 	    	type: "singleline"
 	    }
     ],
-{#    rows: sectionSettings['links'],#}
-	rows: [
-		{% for section in sections %}
-			{% for link in section.links %}
-				{
-					heading: "{{ section.heading }}",
-					value: "{{ link[0] }}",
-					url: "{{ link[1] }}",
-					instruction: "{{ link[2] }}"
-				},
-			{% endfor %}
-		{% endfor %}
-	],
+	rows: sectionSettings['links'],
 	allowAdd: true,
 	allowReorder: true,
 	allowDelete: true
-%}) }}
+}) }}
