plugin cleanup and review of code

--- a/src/templates/sections/index.twig
+++ b/src/templates/sections/index.twig
@@ -1,7 +1,7 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 {#
 /**
- * Help Links plugin for Craft CMS 3.x
+ * Help Links plugin for Craft CMS 5.x
  *
  * Help Links index.twig
  *
@@ -55,8 +55,8 @@
 {# The content of the CP Section #}
 {% set content %}
     <h2>{{ "Sections"|t('help-links') }}</h2>
-    <p class="textline">Sections can be created within the plugin settings and they will be added to the navigation on this page.</p>
-    <p class="textline">Each section will start out with an empty table field which you can use to populate your links and add comments. These are created on a per section basis.</p>
+    <p class="textline">Sections can be created within the plugin settings. They will be added to the navigation on this page.</p>
+    <p class="textline">Each section will start out with an empty table field which you can use to populate your links and add comments. These are created on a per-section basis.</p>
     <p class="textline">Please click into a section using this pages navigation to start adding links.</p>
     <p class="textline">Once your links are created you can add the widget to your dashboard to display them.</p>
 {% endset %}
